--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
   <meta property="og:url" content="ضع الرابط كامل">
   <meta property="twitter:url" content="ضع الرابط كامل">
 
-  <!-- رابط الصورة المعروضة في اللينك -->
-  <meta property="og:image" content="رابط الصورة">
-  <meta property="twitter:image" content="رابط الصورة">
+  <!-- https://imgur.com/a/ae2W4vL -->
+  <meta property="og:image" content="https://imgur.com/a/ae2W4vL">
+  <meta property="twitter:image" content="https://imgur.com/a/ae2W4vL">
 
   <meta property="twitter:card" content="summary_large_image">
   <meta property="og:type" content="website">
