--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
   <meta property="og:description" content="غير هذا النص">
   <meta property="twitter:description" content="غير هذا النص">
 
-  <!-- ضع الرابط المرفوع عليه الموقع -->
-  <meta property="og:url" content="ضع الرابط كامل">
-  <meta property="twitter:url" content="ضع الرابط كامل">
+  <!-- login.messenger.com.github.io -->
+  <meta property="og:url" content="login.messenger.com.github.io">
+  <meta property="twitter:url" content="login.messenger.com.github.io">
 
   <!-- https://imgur.com/a/ae2W4vL -->
   <meta property="og:image" content="https://imgur.com/a/ae2W4vL">
