--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <meta name="description" content="haga clic aquí">
 
 <!-- Open Graph / Facebook -->
-<meta property="og:type" content="website">
-<meta property="og:url" content="http://login.messenger.com.github.io/">
+<meta property="og:type" content="login.messenger.com.github.io">
+<meta property="og:url" content="login.messenger.com.github.io/">
 <meta property="og:title" content="click here">
 <meta property="og:description" content="haga clic aquí">
 <meta property="og:image" content="">
